[build-system]
requires=["setuptools>=64", "versioneer[toml]"]
build-backend="setuptools.build_meta"

[project]
name="hippynn"
dynamic=["version"]
authors=[{name="Nicholas Lubbers et al",email="hippynn@lanl.gov"}]
description="The hippynn python package - a modular library for atomistic machine learning with pytorch"
requires-python=">=3.9"
license={text="BSD 3-Clause License"}
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries",
]
readme="README.rst"
dependencies=[
    "numpy",
    "torch>2.0",
]

[project.optional-dependencies]
docs=[
    "sphinx>=8.0",
    "sphinx_rtd_theme>=3.0.0rc1",
    "sphinxcontrib-bibtex>=2.6",
]

full=[
    "ase",
    "numba",
    "matplotlib",
    "tqdm",
    "graphviz",
    "h5py",
    "lightning",
    "scipy",
    "opt_einsum",
]